--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "core-js": "^3.19.3",
     "league-api": "^2.0.0",
     "nuxt": "^2.15.8",
+    "sass": "^1.45.1",
+    "sass-loader": "10",
     "vue": "^2.6.14",
     "vue-server-renderer": "^2.6.14",
     "vue-template-compiler": "^2.6.14",
