--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "core-js": "^3.19.3",
     "league-api": "^2.0.0",
     "nuxt": "^2.15.8",
+    "nuxt-buefy": "^0.4.14",
     "sass": "^1.45.1",
     "sass-loader": "10",
     "vue": "^2.6.14",
