--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "core-js": "^3.19.3",
     "league-api": "^2.0.0",
+    "lodash": "^4.17.21",
     "nuxt": "^2.15.8",
     "nuxt-buefy": "^0.4.14",
     "sass": "^1.45.1",
